# anime-project

./: .gitignore  dw_tables.sql  referencias.txt  split_raw_csv.ipynb
lambda/animeCatalogETL/: etl.py  lambda_function.py  utils.py
lambda/animeRatingsETL/: etl.py  lambda_function.py  settings.json
s3/anime-ds-project/raw_data/anime_catalog/: anime_2024-05-01.csv  anime_2024-05-02.csv  anime_2024-05-03.csv  anime_2024-05-04.csv  anime_2024-05-05.csv  anime_2024-05-06.csv  anime_with_synopsis_2024-05-01.csv  anime_with_synopsis_2024-05-02.csv  anime_with_synopsis_2024-05-03.csv  anime_with_synopsis_2024-05-04.csv
sagemaker/: customers_clustering.ipynb  data_analisys.ipynb  lda_model.ipynb  pyproject.toml  recomendation_system_model.ipynb  requirements.txt  settings.json  utils.py
sagemaker/results/: lda_genre_3.html  lda_genre_3_topics  lda_synopsis_10.html  lda_synopsis_10_topics  lda_synopsis_3.html  lda_synopsis_3_topics  lda_synopsis_4.html  lda_synopsis_4_topics  lda_synopsis_5.html  lda_synopsis_5_topics
