[tool.poetry]
name = "anime-project"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.0"
gensim = "^4.3.2"
nltk = "^3.8.1"
pyldavis = "^3.4.1"
psycopg2 = "^2.9.9"
seaborn = "^0.13.2"
surprise = "^0.1"
wordcloud = "^1.9.3"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
